0.2.0
Prelim testing on xubuntu OK.
Fixed bug when using single instance re-running init when opeing new file.
Started help for plugins.
Plugins can now call showDocView.
Added kkedit-plugins.h.
Added test plugin.
Started plugins code.
Add caret browsing to docviewer.

0.1.9
Fixed 'Back' segfault.
Made progressbar always stay on top.
Minor fix for default Doxyfile.
Example tools are now installed at "$(DESTDIR)$(pkgdatadir)/Example External Tools", as the packaged versions were not installing them.
Added option to display a progress bar when running external tool, can be controled from the tool.
Removed the use of tempfile, now uses a tempory folder and internally generated random names.
Added progress bar for long documentaion ops.
Fixed opening file from docs not respecting no duplicates when opening link.
Better file integration with doxygen.
Added missing keyboard accelerators for opening menus from keyboard (ALT-F for file menu etc ).
Fixed regex crash when using badly formed replace string.
Improved string slicing code.
Add 'Show Documents' to 'View' menu to show the doxygen docs ( faster ) without rebuilding/updating ( unless they don't exist ).
Better file integration with doxygen.

0.1.8
Numerous small bug fixes and code cleanup. 
Yet another work around for ubuntu based distros ( what is it with dash anyway? ).
Prelim suport for linking doxygen links to source code in the editor ( must use the internal doc viewer, won't work with external browser ).
Fixed goto define opening a file but not scrolling to the proper line.
Goto define now searches for an exact match first and then the nearest match.
Back now goes back after jumping to bookmark.
Default doxygen config file copied to current folder when making documents if there is no file called 'Doxyfile'.
Added Show/Hide docviewer to 'View' menu.
Added runtime check for doxygen.
Added default doxygen config file to "/usr/share/KKEdit/docs"
Added doxygen document builder to 'File' menu.