@@ -1,10 +1,208 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
   </head>
-  <body>
-    This is the tempory plugin help doc.<br>
+  <body alink="#EE0000" bgcolor="#cccccc" link="#0000EE" text="#000000"
+    vlink="#551A8B">
+    <div align="center"><font size="+1"><u><b>Plugin Help</b></u></font><br>
+      <br>
+      KKEdit now supports a simple 'c' plugin system, which allows you
+      to add your own menus, call the built in doc viewer, and a few
+      other things, this will be expanded as time goes on.<br>
+      <br>
+      An example plugin is provided that displays this help.<br>
+      First off when the plugin is loaded/unloaded if you have a
+      function called 'g_module_check_init' and/or 'g_module_unload'
+      these functions will be run automatically and should be used for
+      any initialization/clean up etc.<br>
+      <br>
+      If your module has a function called 'addMenus' then this function
+      is called when KKEdit has finished setting up it's own menus and
+      your plugin can then add to the existing menus or add a new menu,
+      the structure that is passed to the 'addMenus' functions is
+      defined in 'kkedit-plugins.h' which is installed in /usr/include,
+      the basic structure is this:<br>
+      <div align="left"><br>
+        struct plugMenuList<br>
+        {<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuBar;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuFile;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuEdit;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuFunc;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuNav;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuTools;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuHelp;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuBookMark;<br>
+        &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; menuView;<br>
+        };<br>
+        <br>
+        struct plugData<br>
+        {<br>
+        &nbsp;&nbsp;&nbsp; plugMenuList&nbsp;&nbsp; &nbsp;&nbsp; mlist;<br>
+        &nbsp;&nbsp;&nbsp; const char*&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+        &nbsp; dataDir;<br>
+        &nbsp;&nbsp;&nbsp; char*&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; plugFolder;<br>
+        &nbsp;&nbsp;&nbsp; void*&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+        showDoc;<br>
+        &nbsp;&nbsp;&nbsp; char*&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; htmlFile;<br>
+        &nbsp;&nbsp;&nbsp; char**&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; thePage;<br>
+        };<br>
+        <br>
+        <div align="center">The 'plugMenuList' structure is fairly self
+          explanatory, the menBar is where you would add a new main
+          menu, or you can add a menu item to the others, like this
+          plugin adds a menuitem to the 'Help' menu.<br>
+          The other items in the struct are:<br>
+          dataDir=The install location of KKEdit's data usually
+          /usr/share/KKEdit.<br>
+          plugFolder=The plugin folder, defaults to dataDir/plugs.<br>
+          showDoc=The KKEdit fubction to show the builtin docviewer or
+          to display in the default browser, call like so:<br>
+          showDocView(USEURI,(char*)"KKEdit Plugin Help"); Where USEURI
+          is the uri contained in thePage, and the text in the second
+          param is used as a search term if thePage is empty.<br>
+          thePage=The location to store the uri for use in the
+          docviewer.<br>
+          So this call back in the example plugin is setup and called
+          like so:<br>
+          First add the extra menuitem to the 'Help' menu:<br>
+          <br>
+          <div align="left">extern "C" int addMenus (gpointer menulist)<br>
+            {<br>
+            &nbsp;&nbsp;&nbsp; printf("adding&nbsp; plug menus\n");<br>
+            &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp; menuitem;<br>
+            &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp; menu;<br>
+            &nbsp;&nbsp;&nbsp; plugData*&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp; plugdata=(plugData*)menulist;<br>
+            <br>
+            &nbsp;&nbsp;&nbsp;
+menu=gtk_menu_item_get_submenu((GtkMenuItem*)plugdata-&gt;mlist.menuHelp);<br>
+            &nbsp;&nbsp;&nbsp;
+            menuitem=gtk_image_menu_item_new_from_stock(GTK_STOCK_HELP,NULL);<br>
+            &nbsp;&nbsp;&nbsp;
+            gtk_menu_item_set_label((GtkMenuItem*)menuitem,"Plugin
+            Help");<br>
+            &nbsp;&nbsp;&nbsp;
+gtk_signal_connect(GTK_OBJECT(menuitem),"activate",G_CALLBACK(openPlugHelp),plugdata);<br>
+            &nbsp;&nbsp;&nbsp;
+            gtk_menu_shell_append(GTK_MENU_SHELL(menu),menuitem);<br>
+            <br>
+            &nbsp;&nbsp;&nbsp; printf("done adding&nbsp; plug menus\n");<br>
+            &nbsp;&nbsp;&nbsp; return(0);<br>
+            }<br>
+          </div>
+          Then add the callback like so:<br>
+          <div align="left"><br>
+            void openPlugHelp(GtkWidget* widget,gpointer data)<br>
+            {<br>
+            &nbsp;&nbsp;&nbsp; plugData*&nbsp;&nbsp;&nbsp;
+            pdata=(plugData*)data;<br>
+            &nbsp;&nbsp;&nbsp;
+asprintf(pdata-&gt;thePage,"file://%s/plughelp.html",(char*)pdata-&gt;plugFolder);<br>
+            &nbsp;&nbsp;&nbsp; showDocView(USEURI,(char*)"KKEdit Plugin
+            Help");<br>
+            }<br>
+            <br>
+            <div align="center">The full source for the plugin is:<br>
+              <div align="left">/*<br>
+                &nbsp; plugs/kkedit-example-plug.cpp<br>
+                */<br>
+                <br>
+                #include &lt;stdio.h&gt;<br>
+                #include &lt;stdlib.h&gt;<br>
+                #include &lt;glib.h&gt;<br>
+                #include &lt;gtk/gtk.h&gt;<br>
+                #include &lt;gmodule.h&gt;<br>
+                <br>
+                #include "kkedit-plugins.h"<br>
+                <br>
+                void showDocView(int howtodisplay,char* text);<br>
+                <br>
+                extern "C" const gchar* g_module_check_init(GModule
+                *module)<br>
+                {<br>
+                &nbsp;&nbsp;&nbsp; perror("doin ininit");<br>
+                &nbsp;&nbsp;&nbsp; return(NULL);<br>
+                }<br>
+                <br>
+                extern "C" const gchar* g_module_unload(GModule *module)<br>
+                {<br>
+                &nbsp;&nbsp;&nbsp; perror("doin cleanup");<br>
+                &nbsp;&nbsp;&nbsp; return(NULL);<br>
+                }<br>
+                <br>
+                void openPlugHelp(GtkWidget* widget,gpointer data)<br>
+                {<br>
+                &nbsp;&nbsp;&nbsp; plugData*&nbsp;&nbsp;&nbsp;
+                pdata=(plugData*)data;<br>
+                &nbsp;&nbsp;&nbsp;
+asprintf(pdata-&gt;thePage,"file://%s/plughelp.html",(char*)pdata-&gt;plugFolder);<br>
+                &nbsp;&nbsp;&nbsp; showDocView(USEURI,(char*)"KKEdit
+                Plugin Help");<br>
+                }<br>
+                <br>
+                extern "C" int addMenus (gpointer menulist)<br>
+                {<br>
+                &nbsp;&nbsp;&nbsp; printf("adding&nbsp; plug menus\n");<br>
+                &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; menuitem;<br>
+                &nbsp;&nbsp;&nbsp; GtkWidget*&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; menu;<br>
+                &nbsp;&nbsp;&nbsp; plugData*&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; plugdata=(plugData*)menulist;<br>
+                <br>
+                &nbsp;&nbsp;&nbsp;
+menu=gtk_menu_item_get_submenu((GtkMenuItem*)plugdata-&gt;mlist.menuHelp);<br>
+                &nbsp;&nbsp;&nbsp;
+                menuitem=gtk_image_menu_item_new_from_stock(GTK_STOCK_HELP,NULL);<br>
+                &nbsp;&nbsp;&nbsp;
+                gtk_menu_item_set_label((GtkMenuItem*)menuitem,"Plugin
+                Help");<br>
+                &nbsp;&nbsp;&nbsp;
+gtk_signal_connect(GTK_OBJECT(menuitem),"activate",G_CALLBACK(openPlugHelp),plugdata);<br>
+                &nbsp;&nbsp;&nbsp;
+                gtk_menu_shell_append(GTK_MENU_SHELL(menu),menuitem);<br>
+                <br>
+                &nbsp;&nbsp;&nbsp; printf("done adding&nbsp; plug
+                menus\n");<br>
+                &nbsp;&nbsp;&nbsp; return(0);<br>
+                }<br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div align="center">The full source and an example
+                  Makefile is installed in dataDir/plugs</div>
+                <br>
+                <br>
+                <br>
+                <br>
+              </div>
+            </div>
+            <br>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
